[project]
name = "comfyui_face_parsing"
description = "This is a set of custom nodes for ComfyUI. The nodes utilize the [a/face parsing model](https://huggingface.co/jonathandinu/face-parsing) to parse face and provide detailed segmantation. To improve face segmantation accuracy, [a/yolov8 face model](https://huggingface.co/Bingsu/adetailer/) is used to first extract face from an image. There are also auxiliary nodes for image and mask processing. A guided filter is also provided for skin smoothing."
version = "1.0.5"
license = { file = "LICENSE" }
dependencies = ["opencv-contrib-python", "torchvision", "ultralytics", "matplotlib"]

[project.urls]
Repository = "https://github.com/Ryuukeisyou/comfyui_face_parsing"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ryuukeisyou"
DisplayName = "comfyui_face_parsing"
Icon = ""
